overflow-fixed

--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,11 @@ body{
 .screen{
     background-color:rgb(217, 216, 216);
     width:250px;
-    height:50px;
+    height:90px;
     padding:5px;
     border-radius:7px;
     font-size:24px;
+    overflow:scroll;
 }
 .numbers{
     justify-content:space-around;
